small tooltip adds

--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -641,26 +641,26 @@
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
-	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"item.mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
 	"mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"item.mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
@@ -675,22 +675,22 @@
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
@@ -1768,6 +1768,46 @@
 "_comment": " [CATEGORY]: FORMATTER - NAMES",
 
 
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
+	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
+	"mmorpg.gear_type.plate_pants": "Plate Pants",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Tower Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.tome": "Tome",
+	"mmorpg.gear_type.totem": "Totem",
+	"mmorpg.gearslot.boots": "Boots",
+	"mmorpg.gearslot.bow": "Bow",
+	"mmorpg.gearslot.chest": "Chest",
+	"mmorpg.gearslot.crossbow": "Crossbow",
+	"mmorpg.gearslot.helmet": "Helmet",
+	"mmorpg.gearslot.necklace": "Necklace",
+	"mmorpg.gearslot.pants": "Pants",
+	"mmorpg.gearslot.ring": "Ring",
+	"mmorpg.gearslot.shield": "Shield",
+	"mmorpg.gearslot.staff": "Staff",
+	"mmorpg.gearslot.sword": "Sword",
+	"mmorpg.gearslot.tome": "Tome",
+	"mmorpg.gearslot.totem": "Totem",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
@@ -1825,44 +1865,19 @@
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
 
-	"mmorpg.gear_type.bow": "Bow",
-	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
-	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
-	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
-	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
-	"mmorpg.gear_type.crossbow": "Crossbow",
-	"mmorpg.gear_type.leather_boots": "Leather Boots",
-	"mmorpg.gear_type.leather_chest": "Leather Chest",
-	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
-	"mmorpg.gear_type.leather_pants": "Leather Pants",
-	"mmorpg.gear_type.necklace": "Necklace",
-	"mmorpg.gear_type.plate_boots": "Plate Boots",
-	"mmorpg.gear_type.plate_chest": "Plate Chest",
-	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
-	"mmorpg.gear_type.plate_pants": "Plate Pants",
-	"mmorpg.gear_type.ring": "Ring",
-	"mmorpg.gear_type.shield": "Tower Shield",
-	"mmorpg.gear_type.staff": "Staff",
-	"mmorpg.gear_type.sword": "Sword",
-	"mmorpg.gear_type.tome": "Tome",
-	"mmorpg.gear_type.totem": "Totem",
-	"mmorpg.gearslot.boots": "Boots",
-	"mmorpg.gearslot.bow": "Bow",
-	"mmorpg.gearslot.chest": "Chest",
-	"mmorpg.gearslot.crossbow": "Crossbow",
-	"mmorpg.gearslot.helmet": "Helmet",
-	"mmorpg.gearslot.necklace": "Necklace",
-	"mmorpg.gearslot.pants": "Pants",
-	"mmorpg.gearslot.ring": "Ring",
-	"mmorpg.gearslot.shield": "Shield",
-	"mmorpg.gearslot.staff": "Staff",
-	"mmorpg.gearslot.sword": "Sword",
-	"mmorpg.gearslot.tome": "Tome",
-	"mmorpg.gearslot.totem": "Totem",
+	"item.mmorpg.jewelry.necklace.diamond": "Necklace",
+	"item.mmorpg.jewelry.necklace.gold": "Necklace",
+	"item.mmorpg.jewelry.necklace.iron": "Necklace",
+	"item.mmorpg.jewelry.ring.diamond": "Ring",
+	"item.mmorpg.jewelry.ring.gold": "Ring",
+	"item.mmorpg.jewelry.ring.iron": "Ring",
+	"item.mmorpg.weapon.staff.diamond": "Staff",
+	"item.mmorpg.weapon.staff.iron": "Staff",
+	"item.mmorpg.weapon.staff.wood": "Staff",
 
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: STATPRIORITY - NAMES",
@@ -1878,21 +1893,6 @@
 	"mmorpg.stat_priority.hit_prevention": "HIT_PREVENTION",
 
 "_comment": " [CATEGORY]: STATPRIORITY - NAMES",
-
-
-"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
-
-	"item.mmorpg.jewelry.necklace.diamond": "Necklace",
-	"item.mmorpg.jewelry.necklace.gold": "Necklace",
-	"item.mmorpg.jewelry.necklace.iron": "Necklace",
-	"item.mmorpg.jewelry.ring.diamond": "Ring",
-	"item.mmorpg.jewelry.ring.gold": "Ring",
-	"item.mmorpg.jewelry.ring.iron": "Ring",
-	"item.mmorpg.weapon.staff.diamond": "Staff",
-	"item.mmorpg.weapon.staff.iron": "Staff",
-	"item.mmorpg.weapon.staff.wood": "Staff",
-
-"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: STAT LAYER - NAMES",
@@ -2600,6 +2600,7 @@
 	"mmorpg.word.exp": "Exp",
 	"mmorpg.word.game_changer": "Game Changer Talent",
 	"mmorpg.word.gear": "Gear",
+	"mmorpg.word.gear_desc": "Armors, Weapons and Jewlery. It's a Gear as long as it has Mine and Slash stats.",
 	"mmorpg.word.gear_locked_type_cloth": "Cloth",
 	"mmorpg.word.gear_locked_type_leather": "Leather",
 	"mmorpg.word.gear_locked_type_plate": "Plate",
@@ -2626,6 +2627,7 @@
 	"mmorpg.word.isnotunique": "Is Not Unique",
 	"mmorpg.word.isunique": "Is Unique",
 	"mmorpg.word.item": "Item",
+	"mmorpg.word.item_types": "Item Types:",
 	"mmorpg.word.jewel": "Jewel",
 	"mmorpg.word.jewels": "Jewels",
 	"mmorpg.word.jewerly": "On Jewelry: ",
@@ -2687,6 +2689,7 @@
 	"mmorpg.word.prophecyplayeraffixtaken": "Currently Taken Debuff:",
 	"mmorpg.word.pvp_dmg_multi": "PVP Dmg Multi",
 	"mmorpg.word.radius": "Radius: %1$sb",
+	"mmorpg.word.rarities": "Rarities:",
 	"mmorpg.word.requirements": "Requirements: ",
 	"mmorpg.word.rerollsaffix": "Rerolls an Affix",
 	"mmorpg.word.reward_offers": "Reward Offers:",
@@ -2820,48 +2823,48 @@
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - DESCRIPTIONS",
 
-	"item.mmorpg.currency.desc.affix_common_reroll": "Re-rolls a random affix into a Common Rarity Random Affix.",
 	"mmorpg.currency.desc.affix_common_reroll": "Re-rolls a random affix into a Common Rarity Random Affix.",
-	"mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
+	"item.mmorpg.currency.desc.affix_common_reroll": "Re-rolls a random affix into a Common Rarity Random Affix.",
 	"item.mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
+	"mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
 	"item.mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
 	"mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
-	"item.mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
 	"mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
+	"item.mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
 	"mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
-	"mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
+	"mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_quality": "Either Randomly Upgrades Quality of An Item (1-5%) or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_quality": "Either Randomly Upgrades Quality of An Item (1-5%) or Corrupts the Item, making it Unmodifiable.",
-	"mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
-	"item.mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
+	"mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
-	"item.mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
+	"item.mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
 	"mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
+	"item.mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
 	"item.mmorpg.currency.desc.map_rarity_upgrade": "Upgrades Map Rarity. Maps with higher rarities can drop better and higher rarity gear but are also more difficult to beat.",
 	"mmorpg.currency.desc.map_rarity_upgrade": "Upgrades Map Rarity. Maps with higher rarities can drop better and higher rarity gear but are also more difficult to beat.",
 	"item.mmorpg.currency.desc.mastery_seal0": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal0": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"item.mmorpg.currency.desc.mastery_seal1": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal1": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
+	"item.mmorpg.currency.desc.mastery_seal1": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal2": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal2": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
+	"mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
+	"mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
 	"item.mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
-	"mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
+	"mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
-	"mmorpg.currency.desc.sharpening_stone2": "Upgrades Quality of An Item by 6%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone2": "Upgrades Quality of An Item by 6%, can only be used once",
+	"mmorpg.currency.desc.sharpening_stone2": "Upgrades Quality of An Item by 6%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone3": "Upgrades Quality of An Item by 8%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone3": "Upgrades Quality of An Item by 8%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone4": "Upgrades Quality of An Item by 10%, can only be used once",
@@ -3342,13 +3345,6 @@
 "_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
 
 
-"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
-
-	"mmorpg.uber_map.desc.uber1": "A living mortal, in MY Realm?",
-
-"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
-
-
 "_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS",
 
 	"mmorpg.ailment.desc.bleed": "Deals 120% of the damage as \u00A76\u2600 Physical\u00A77\u00A79 Damage for 5s.",
@@ -3358,7 +3354,14 @@
 	"mmorpg.ailment.desc.poison": "Deals 150% of the damage as \u00A75\u2600 Chaos\u00A77\u00A79 Damage for 10s.",
 	"mmorpg.effect.desc.thorn": "Attacking an enemy with Thorns consumes the thorns to deal [calc:thorn_bush] \u00A76\u2600 Physical\u00A77 Damage",
 
-"_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS"
+"_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS",
+
+
+"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
+
+	"mmorpg.uber_map.desc.uber1": "A living mortal, in MY Realm?",
+
+"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS"
 
 
 }
