--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,3 +3,4 @@ Changelog of recent updates: https://github.com/RobertSkalko/Mine-And-Slash-Rewo
 v.5.6.4
 - added a temp-fix for possible lag during map teleports. First 5s will be silenced
 - extractors now tell what rarity gear they can be used on
+- added new config, chat exp messages
