--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -641,56 +641,56 @@
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
-	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
+	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
 	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
@@ -2598,9 +2598,10 @@
 	"mmorpg.word.energy_cost_per_mob": "Energy Cost: %1$s + %2$s Per mob, x %3$s Dmg",
 	"mmorpg.word.everyone_is_ally": "Everyone is Considered an Ally\n\nBy default your spells only target your MNS team members and yourself.\n\nWith this enabled, your heals, buffs etc will target everyone, including possible enemies!",
 	"mmorpg.word.exp": "Exp",
+	"mmorpg.word.exp_chat_messages": "Sends a Message in chat when you gain Exp\n\nYou can hover over it for useful info like exp multipliers",
 	"mmorpg.word.game_changer": "Game Changer Talent",
 	"mmorpg.word.gear": "Gear",
-	"mmorpg.word.gear_desc": "Armors, Weapons and Jewlery. It's a Gear as long as it has Mine and Slash stats.",
+	"mmorpg.word.gear_desc": "Armors, Weapons and Jewelry. It's a Gear as long as it has Mine and Slash stats.",
 	"mmorpg.word.gear_locked_type_cloth": "Cloth",
 	"mmorpg.word.gear_locked_type_leather": "Leather",
 	"mmorpg.word.gear_locked_type_plate": "Plate",
@@ -2640,7 +2641,7 @@
 	"mmorpg.word.lockedsuppgemslot": "Locked Support Gem Slot",
 	"mmorpg.word.loot": "Loot",
 	"mmorpg.word.loot_modifier": "Loot Modifier",
-	"mmorpg.word.loot_modifiers_info": "Loot Modifiers:",
+	"mmorpg.word.loot_modifiers_info": "Modifiers:",
 	"mmorpg.word.lvl_exponent_mob_dmg": "Leveled Exponent Mob DMG",
 	"mmorpg.word.major": "Major",
 	"mmorpg.word.mana_cost": "Mana Cost: %1$s",
@@ -2657,6 +2658,7 @@
 	"mmorpg.word.mob_kill_loot_info_msg": "Killed [%1$s].",
 	"mmorpg.word.mob_rarity_multi": "Mob Rarity Dmg Multi",
 	"mmorpg.word.mod_name": "Mine and Slash",
+	"mmorpg.word.multi_element": "Multi-Element Damage",
 	"mmorpg.word.multiplicative_damage_less": "Less",
 	"mmorpg.word.multiplicative_damage_more": "More",
 	"mmorpg.word.multiply_stat_increased": "Increased",
@@ -2753,7 +2755,9 @@
 	"mmorpg.loot_modifier.anti_mob_farm_mod": "Anti Mob Farm Mod",
 	"mmorpg.loot_modifier.break_spawner": "Break Spawner",
 	"mmorpg.loot_modifier.chest": "Chest",
+	"mmorpg.loot_modifier.config": "Config File",
 	"mmorpg.loot_modifier.dimension_loot": "Dimension",
+	"mmorpg.loot_modifier.entity_datapack": "Mob Datapack",
 	"mmorpg.loot_modifier.favor": "Favor Rank",
 	"mmorpg.loot_modifier.level_distance_penalty": "Level Distance Penalty",
 	"mmorpg.loot_modifier.low_level_boost": "Low Level",
@@ -2763,6 +2767,7 @@
 	"mmorpg.loot_modifier.mob_datapack": "Mob Datapack",
 	"mmorpg.loot_modifier.mob_health": "Mob Health",
 	"mmorpg.loot_modifier.mob_rarity": "Mob Rarity",
+	"mmorpg.loot_modifier.player_bonus_exp": "Player Exp Bonus",
 	"mmorpg.loot_modifier.player_loot_quantity": "Player Loot Quantity",
 	"mmorpg.loot_modifier.profession_bonus_stat": "Profession Bonus Stat",
 
@@ -2823,56 +2828,56 @@
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - DESCRIPTIONS",
 
-	"mmorpg.currency.desc.affix_common_reroll": "Re-rolls a random affix into a Common Rarity Random Affix.",
 	"item.mmorpg.currency.desc.affix_common_reroll": "Re-rolls a random affix into a Common Rarity Random Affix.",
-	"item.mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
+	"mmorpg.currency.desc.affix_common_reroll": "Re-rolls a random affix into a Common Rarity Random Affix.",
 	"mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
-	"item.mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
+	"item.mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
 	"mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
-	"mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
+	"item.mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
 	"item.mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
+	"mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
 	"mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
-	"item.mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
+	"item.mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_quality": "Either Randomly Upgrades Quality of An Item (1-5%) or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_quality": "Either Randomly Upgrades Quality of An Item (1-5%) or Corrupts the Item, making it Unmodifiable.",
-	"item.mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
-	"mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
+	"item.mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
+	"mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
 	"mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
 	"item.mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
 	"item.mmorpg.currency.desc.map_rarity_upgrade": "Upgrades Map Rarity. Maps with higher rarities can drop better and higher rarity gear but are also more difficult to beat.",
 	"mmorpg.currency.desc.map_rarity_upgrade": "Upgrades Map Rarity. Maps with higher rarities can drop better and higher rarity gear but are also more difficult to beat.",
-	"item.mmorpg.currency.desc.mastery_seal0": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal0": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"mmorpg.currency.desc.mastery_seal1": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
+	"item.mmorpg.currency.desc.mastery_seal0": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal1": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"mmorpg.currency.desc.mastery_seal2": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
+	"mmorpg.currency.desc.mastery_seal1": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal2": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"item.mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
+	"mmorpg.currency.desc.mastery_seal2": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
+	"item.mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
 	"item.mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
-	"item.mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
-	"mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
+	"item.mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
-	"item.mmorpg.currency.desc.sharpening_stone2": "Upgrades Quality of An Item by 6%, can only be used once",
+	"mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone2": "Upgrades Quality of An Item by 6%, can only be used once",
+	"item.mmorpg.currency.desc.sharpening_stone2": "Upgrades Quality of An Item by 6%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone3": "Upgrades Quality of An Item by 8%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone3": "Upgrades Quality of An Item by 8%, can only be used once",
-	"item.mmorpg.currency.desc.sharpening_stone4": "Upgrades Quality of An Item by 10%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone4": "Upgrades Quality of An Item by 10%, can only be used once",
+	"item.mmorpg.currency.desc.sharpening_stone4": "Upgrades Quality of An Item by 10%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone5": "Upgrades Quality of An Item by 12%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone5": "Upgrades Quality of An Item by 12%, can only be used once",
-	"mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing",
 	"item.mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing",
+	"mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing",
 	"item.mmorpg.currency.desc.unique_reroll": "Increases or reduces unique stats by 5%",
 	"mmorpg.currency.desc.unique_reroll": "Increases or reduces unique stats by 5%",
 
@@ -3345,6 +3350,13 @@
 "_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
 
 
+"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
+
+	"mmorpg.uber_map.desc.uber1": "A living mortal, in MY Realm?",
+
+"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
+
+
 "_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS",
 
 	"mmorpg.ailment.desc.bleed": "Deals 120% of the damage as \u00A76\u2600 Physical\u00A77\u00A79 Damage for 5s.",
@@ -3354,14 +3366,7 @@
 	"mmorpg.ailment.desc.poison": "Deals 150% of the damage as \u00A75\u2600 Chaos\u00A77\u00A79 Damage for 10s.",
 	"mmorpg.effect.desc.thorn": "Attacking an enemy with Thorns consumes the thorns to deal [calc:thorn_bush] \u00A76\u2600 Physical\u00A77 Damage",
 
-"_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS",
-
-
-"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
-
-	"mmorpg.uber_map.desc.uber1": "A living mortal, in MY Realm?",
-
-"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS"
+"_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS"
 
 
 }
