--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,3 +4,5 @@ v.5.6.4
 - added a temp-fix for possible lag during map teleports. First 5s will be silenced
 - extractors now tell what rarity gear they can be used on
 - added new config, chat exp messages
+- disabled vex loot in maps
+- added names to features
