--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -643,32 +643,32 @@
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
-	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
 	"item.mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
+	"mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
 	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
@@ -677,16 +677,16 @@
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
@@ -833,7 +833,7 @@
 	"mmorpg.talent.energy_claws": "Energy Claws",
 	"mmorpg.talent.energy_percent_big": "Major Energy",
 	"mmorpg.talent.energy_regen_percent_big": "Major Energy Regen",
-	"mmorpg.talent.faster_projectiles_big": "Major Faster Projectiles",
+	"mmorpg.talent.faster_projectiles_big": "Major Projectile Speed",
 	"mmorpg.talent.fire_any_wep_damage_big": "Major Fire Weapon Damage",
 	"mmorpg.talent.fire_dot_damage_big": "Major Fire Damage Over Time",
 	"mmorpg.talent.fire_penetration_big": "Major Fire Penetration",
@@ -1241,7 +1241,7 @@
 	"mmorpg.stat.farming_double_drop": "Double Drop Chance",
 	"mmorpg.stat.farming_exp_bonus": "Profession Exp Bonus",
 	"mmorpg.stat.farming_triple_drop": "Triple Drop Chance",
-	"mmorpg.stat.faster_projectiles": "Faster Projectiles",
+	"mmorpg.stat.faster_projectiles": "Projectile Speed",
 	"mmorpg.stat.fire_ailment_aura_cost": "\u00A77Decree of Fire Cost",
 	"mmorpg.stat.fire_any_wep_damage": "Fire Weapon Damage",
 	"mmorpg.stat.fire_cast_time": "Fire Cast Time",
@@ -1770,6 +1770,46 @@
 "_comment": " [CATEGORY]: FORMATTER - NAMES",
 
 
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
+	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
+	"mmorpg.gear_type.plate_pants": "Plate Pants",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Tower Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.tome": "Tome",
+	"mmorpg.gear_type.totem": "Totem",
+	"mmorpg.gearslot.boots": "Boots",
+	"mmorpg.gearslot.bow": "Bow",
+	"mmorpg.gearslot.chest": "Chest",
+	"mmorpg.gearslot.crossbow": "Crossbow",
+	"mmorpg.gearslot.helmet": "Helmet",
+	"mmorpg.gearslot.necklace": "Necklace",
+	"mmorpg.gearslot.pants": "Pants",
+	"mmorpg.gearslot.ring": "Ring",
+	"mmorpg.gearslot.shield": "Shield",
+	"mmorpg.gearslot.staff": "Staff",
+	"mmorpg.gearslot.sword": "Sword",
+	"mmorpg.gearslot.tome": "Tome",
+	"mmorpg.gearslot.totem": "Totem",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
@@ -1827,44 +1867,19 @@
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
 
-	"mmorpg.gear_type.bow": "Bow",
-	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
-	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
-	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
-	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
-	"mmorpg.gear_type.crossbow": "Crossbow",
-	"mmorpg.gear_type.leather_boots": "Leather Boots",
-	"mmorpg.gear_type.leather_chest": "Leather Chest",
-	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
-	"mmorpg.gear_type.leather_pants": "Leather Pants",
-	"mmorpg.gear_type.necklace": "Necklace",
-	"mmorpg.gear_type.plate_boots": "Plate Boots",
-	"mmorpg.gear_type.plate_chest": "Plate Chest",
-	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
-	"mmorpg.gear_type.plate_pants": "Plate Pants",
-	"mmorpg.gear_type.ring": "Ring",
-	"mmorpg.gear_type.shield": "Tower Shield",
-	"mmorpg.gear_type.staff": "Staff",
-	"mmorpg.gear_type.sword": "Sword",
-	"mmorpg.gear_type.tome": "Tome",
-	"mmorpg.gear_type.totem": "Totem",
-	"mmorpg.gearslot.boots": "Boots",
-	"mmorpg.gearslot.bow": "Bow",
-	"mmorpg.gearslot.chest": "Chest",
-	"mmorpg.gearslot.crossbow": "Crossbow",
-	"mmorpg.gearslot.helmet": "Helmet",
-	"mmorpg.gearslot.necklace": "Necklace",
-	"mmorpg.gearslot.pants": "Pants",
-	"mmorpg.gearslot.ring": "Ring",
-	"mmorpg.gearslot.shield": "Shield",
-	"mmorpg.gearslot.staff": "Staff",
-	"mmorpg.gearslot.sword": "Sword",
-	"mmorpg.gearslot.tome": "Tome",
-	"mmorpg.gearslot.totem": "Totem",
+	"item.mmorpg.jewelry.necklace.diamond": "Necklace",
+	"item.mmorpg.jewelry.necklace.gold": "Necklace",
+	"item.mmorpg.jewelry.necklace.iron": "Necklace",
+	"item.mmorpg.jewelry.ring.diamond": "Ring",
+	"item.mmorpg.jewelry.ring.gold": "Ring",
+	"item.mmorpg.jewelry.ring.iron": "Ring",
+	"item.mmorpg.weapon.staff.diamond": "Staff",
+	"item.mmorpg.weapon.staff.iron": "Staff",
+	"item.mmorpg.weapon.staff.wood": "Staff",
 
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: STATPRIORITY - NAMES",
@@ -1880,21 +1895,6 @@
 	"mmorpg.stat_priority.hit_prevention": "HIT_PREVENTION",
 
 "_comment": " [CATEGORY]: STATPRIORITY - NAMES",
-
-
-"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
-
-	"item.mmorpg.jewelry.necklace.diamond": "Necklace",
-	"item.mmorpg.jewelry.necklace.gold": "Necklace",
-	"item.mmorpg.jewelry.necklace.iron": "Necklace",
-	"item.mmorpg.jewelry.ring.diamond": "Ring",
-	"item.mmorpg.jewelry.ring.gold": "Ring",
-	"item.mmorpg.jewelry.ring.iron": "Ring",
-	"item.mmorpg.weapon.staff.diamond": "Staff",
-	"item.mmorpg.weapon.staff.iron": "Staff",
-	"item.mmorpg.weapon.staff.wood": "Staff",
-
-"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: STAT LAYER - NAMES",
@@ -2851,24 +2851,24 @@
 
 	"mmorpg.currency.desc.affix_common_reroll": "Re-rolls a random affix into a Common Rarity Random Affix.",
 	"item.mmorpg.currency.desc.affix_common_reroll": "Re-rolls a random affix into a Common Rarity Random Affix.",
-	"item.mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
 	"mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
+	"item.mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
 	"item.mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
 	"mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
-	"item.mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
 	"mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
+	"item.mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
 	"mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
-	"mmorpg.currency.desc.entangled_quality": "Either Randomly Upgrades Quality of An Item (1-5%) or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_quality": "Either Randomly Upgrades Quality of An Item (1-5%) or Corrupts the Item, making it Unmodifiable.",
+	"mmorpg.currency.desc.entangled_quality": "Either Randomly Upgrades Quality of An Item (1-5%) or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
-	"mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
 	"item.mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
-	"mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
+	"mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
 	"item.mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
+	"mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
 	"item.mmorpg.currency.desc.map_rarity_upgrade": "Upgrades Map Rarity. Maps with higher rarities can drop better and higher rarity gear but are also more difficult to beat.",
 	"mmorpg.currency.desc.map_rarity_upgrade": "Upgrades Map Rarity. Maps with higher rarities can drop better and higher rarity gear but are also more difficult to beat.",
 	"item.mmorpg.currency.desc.mastery_seal0": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
@@ -2879,28 +2879,28 @@
 	"item.mmorpg.currency.desc.mastery_seal2": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"item.mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
+	"item.mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
 	"item.mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
+	"mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
 	"item.mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
-	"item.mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
+	"item.mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone2": "Upgrades Quality of An Item by 6%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone2": "Upgrades Quality of An Item by 6%, can only be used once",
-	"item.mmorpg.currency.desc.sharpening_stone3": "Upgrades Quality of An Item by 8%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone3": "Upgrades Quality of An Item by 8%, can only be used once",
+	"item.mmorpg.currency.desc.sharpening_stone3": "Upgrades Quality of An Item by 8%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone4": "Upgrades Quality of An Item by 10%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone4": "Upgrades Quality of An Item by 10%, can only be used once",
-	"mmorpg.currency.desc.sharpening_stone5": "Upgrades Quality of An Item by 12%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone5": "Upgrades Quality of An Item by 12%, can only be used once",
+	"mmorpg.currency.desc.sharpening_stone5": "Upgrades Quality of An Item by 12%, can only be used once",
 	"item.mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing. Can't add more sockets than the item's rarity allows.",
 	"mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing. Can't add more sockets than the item's rarity allows.",
-	"mmorpg.currency.desc.unique_reroll": "Increases or reduces unique stats by 5%",
 	"item.mmorpg.currency.desc.unique_reroll": "Increases or reduces unique stats by 5%",
+	"mmorpg.currency.desc.unique_reroll": "Increases or reduces unique stats by 5%",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - DESCRIPTIONS",
 
@@ -3371,13 +3371,6 @@
 "_comment": " [CATEGORY]: STATS - DESCRIPTIONS",
 
 
-"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
-
-	"mmorpg.uber_map.desc.uber1": "A living mortal, in MY Realm?",
-
-"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
-
-
 "_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS",
 
 	"mmorpg.ailment.desc.bleed": "Deals 120% of the damage as \u00A76\u2600 Physical\u00A77\u00A79 Damage for 5s.",
@@ -3387,7 +3380,14 @@
 	"mmorpg.ailment.desc.poison": "Deals 150% of the damage as \u00A75\u2600 Chaos\u00A77\u00A79 Damage for 10s.",
 	"mmorpg.effect.desc.thorn": "Attacking an enemy with Thorns consumes the thorns to deal [calc:thorn_bush] \u00A76\u2600 Physical\u00A77 Damage",
 
-"_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS"
+"_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS",
+
+
+"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
+
+	"mmorpg.uber_map.desc.uber1": "A living mortal, in MY Realm?",
+
+"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS"
 
 
 }
