charge gui redesign

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,3 +2,4 @@ Changelog of recent updates: https://github.com/RobertSkalko/Mine-And-Slash-Rewo
 
 v.5.6.6
 - Some useless/confusing items are now hidden from JEI, still available in creative tabs
+- charge gui redesigned
