--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -8,3 +8,4 @@ The actual animations file is in the assets\mmorpg\player_animation folder
 - charge gui redesigned
 - cast bar gui redesigned
 - player is now slowed when casting (like when using an item, unsure if feels the same though)
+- hotbar swapping overlay reworked to show all spells but also show which hotbar is the currently used
